# broken-down-models

./: .flake8  .gitignore  .readthedocs.yml  CHANGELOG.rst  EXPLANATIONS.rst  LICENSE  Pipfile  README.rst  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  tests.yml
bdmodels/: apps.py  fields.py  migration_ops.py  models.py  tests.py
docs/: benchmarks.rst  conf.py  contributing.rst  details.rst  index.rst  intro.rst  migrations.rst  optimizations.rst  requirements.txt  rewriting-models.rst  usage.rst
docs/_ext/: djangodocs.py
docs/ref/: bdmodels.rst
test_bdmodels/: manage.py
test_bdmodels/django_model_inheritance/: __init__.py  deferred_tests.py  models.py
test_bdmodels/test_bdmodels/: settings.py  urls.py  wsgi.py
test_bdmodels/testapp/: models.py  test_profile.py  tests.py
test_bdmodels/testapp/migrations/: 0001_initial.py  0002_add_virtual_parent_links.py  0002_partialchild.py  0003_child_user.py  0003_timestampedchild.py  0004_childproxy.py  0004_userchild.py  0005_childwithvirtualnonparent.py  0005_nephew_parentwithfk.py  0006_virtualchild.py
test_bdmodels/testmigs/: apps.py  models.py  tests.py
test_bdmodels/testmigs/migrations/: 0001_initial.py  0002_break_big_model.py  0003_copy_big_model.py  0004_cleanup_big_model.py
