[tool.poetry]
name = "broken-down-models"
version = "0.2.1"
description = "A set of utlities for breaking a large Django model down to separate components"
readme = "README.rst"
homepage = "https://github.com/Matific/broken-down-models"
documentation = "https://broken-down-models.readthedocs.io/en/latest/intro.html"
authors = ["Shai Berger <shai.berger@slatescience.com>"]
license = "MIT"
packages = [
    {include = "bdmodels"},
]
exclude = ["bdmodels/tests.py"]

classifiers = [
    # Classifiers for Python versions and license added automatically by Poetry
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
keywords = ["Django", "models", "database", "optimization", "refactoring"]

[tool.poetry.dependencies]
python = "^3.7"
django = ">= 2.2"

[tool.poetry.dev-dependencies]
ipython = "*"
flake8 = "*"
tox = "^3.23.1"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^0.5.2"
dj-database-url = "^0.5.0"


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39}-django{22,31,32,40},py37-django{22,31,32}
isolated_build = True
skipsdist = True

[testenv]
deps =
    flake8
    django22: Django>=2.2,<2.3
    django22: psycopg2<2.9

    django31: Django>=3.1,<3.2
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    psycopg2
    dj-database-url>=0.5.0,<0.6

changedir = test_bdmodels

passenv = BDMODELS_DB

commands =
    flake8 ..
    python manage.py test bdmodels testapp testmigs {posargs}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
