[tool.poetry]
name = "broken-down-models"
version = "0.5.0"
description = "A set of utlities for breaking a large Django model down to separate components"
readme = "README.rst"
homepage = "https://github.com/Matific/broken-down-models"
documentation = "https://broken-down-models.readthedocs.io/en/latest/intro.html"
authors = ["Shai Berger <shai.berger@slatescience.com>"]
license = "MIT"
packages = [
    {include = "bdmodels"},
]
exclude = ["bdmodels/tests.py"]

classifiers = [
    # Classifiers for Python versions and license added automatically by Poetry
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Topic :: Database",
]
keywords = ["Django", "models", "database", "optimization", "refactoring"]

[tool.poetry.dependencies]
python = "^3.9"
django = ">= 4.2"

[tool.poetry.group.dev.dependencies]
ipython = "*"
flake8 = "*"
tox = "^4.24.1"
Sphinx = "~7.4.7"
sphinx-rtd-theme = "~3.0.2"
dj-database-url = "^2.3.0"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39-django42, py{310,311,312}-django{42,50,51,52}, py313-django{51,52,main}
isolated_build = True
skipsdist = True

[testenv]
deps =
    flake8

    django42: Django>=4.2,<4.3
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    django52: Django>=5.2,<5.3
    djangomain: git+https://github.com/django/django.git@main#egg=django
    psycopg2-binary
    dj-database-url>=2.3.0,<3.0

changedir = test_bdmodels

passenv = BDMODELS_DB

commands =
    flake8 ..
    python manage.py test bdmodels testapp testmigs {posargs}
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
