[metadata]
name = broken-down-model
version = 0.0.1
author = Shai Berger, Matific
author_email = shai@platonix.com
description = Support breaking a large Django model to separate parts
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/SlateScience/broken-down-model/
project_urls =
    Bug Tracker = https://github.com/SlateScience/broken-down-model/issues
classifiers =
    Programming Language :: Python :: 3
    License :: TODO
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = bdmodels
python_requires = >=3.7
